# CSV_profilier-

./: README.md  main copy.py  main.py  pyproject.toml  test.py
data/: sample.csv
outputs/: sample.json  sample.md  sample_profile.json  sample_profile.md
src/: data_profile_report.json  data_profile_report.md  saudi_shopping_with_missing .xlsx  saudi_shopping_with_missing2.csv
src/csv_profiler/: app.py  cli.py  io_handler.py  profiling.py  render.py
