[project]
name = "profile"
version = "0.1.0"
description = "A simple CSV data profiling tool"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "streamlit",
    "pandas",
    "typer",
]

[project.scripts]
profile = "csv_profiler.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"